--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath />
 	</parent>
 	<groupId>hr.hep.tesla</groupId>
-	<artifactId>hep-tesla</artifactId>
+	<artifactId>tesla</artifactId>
 	<version>0.1.1</version>
 	<packaging>pom</packaging>
 	
@@ -18,8 +18,8 @@
 	</properties>
 	
 	<modules>
-		<module>../tesla-powerplant-registry</module>
-		<module>../tesla-common</module>
+		<module>tesla-powerplant-registry</module>
+		<module>tesla-common</module>
 	</modules>
 	
 	<build>
