--- a/tesla-powerplant-registry/pom.xml
+++ b/tesla-powerplant-registry/pom.xml
@@ -107,6 +107,11 @@
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-jackson</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>hr.hep.tesla</groupId>
+			<artifactId>tesla-common</artifactId>
+			<version>0.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
